dnl
dnl $Id$
dnl
dnl This is QuantLib Docs' configure.in
dnl Process this file with autoconf to produce a configure script.
dnl

AC_INIT(quantlib.doxy)
AM_INIT_AUTOMAKE(QuantLib-docs, 0.2.0)

dnl Check for programs

AC_PROG_INSTALL
AC_PATH_PROG(SED, sed, notfound)
AM_CONDITIONAL(SED_FOUND, test x$SED != xnotfound)
AC_PATH_PROG(DOXYGEN, doxygen, notfound)
AM_CONDITIONAL(DOXYGEN_FOUND, test x$DOXYGEN != xnotfound)
AC_PATH_PROG(LATEX, latex, notfound)
AM_CONDITIONAL(LATEX_FOUND, test x$LATEX != xnotfound)
AC_PATH_PROG(PDFLATEX, pdflatex, notfound)
AM_CONDITIONAL(PDFLATEX_FOUND, test x$PDFLATEX != xnotfound)
AC_PATH_PROG(DVIPS, dvips, notfound)
AM_CONDITIONAL(DVIPS_FOUND, test x$DVIPS != xnotfound)

AC_OUTPUT(Makefile)
echo "----------------------------------------------------------------"
echo "You can now type one of the following commands:"
echo ""
echo "    make docs-html: Produce HTML documentation"
echo "    make docs-ps:   Produce PostScript documentation"
echo "    make docs-pdf:  Produce PDF documentation"
echo "    make docs-all:  Produce all type of documentation"
echo ""

