includedir = $(prefix)/include/ql/SWIG

EXTRA_DIST = README.txt

include_HEADERS = \
	Barrier.i BoundaryConditions.i Calendars.i Currencies.i \
	Date.i DayCounters.i Distributions.i Financial.i History.i \
	Instruments.i Interpolation.i Matrix.i MontecarloPricers.i \
	MontecarloTools.i Operators.i Options.i Pricers.i QLArray.i \
	QuantLib.i RandomGenerators.i RiskStatistics.i Solvers1D.i \
	Statistics.i String.i TermStructures.i Vectors.i
