
if AUTO_EXAMPLES

dist_man_MANS = quantlib-config.1 \
                quantlib-test-suite.1 \
                BermudanSwaption.1 \
                ConvertibleBonds.1 \
                DiscreteHedging.1 \
                EquityOption.1 \
                SwapValuation.1

else

dist_man_MANS = quantlib-config.1 \
                quantlib-test-suite.1
EXTRA_DIST = BermudanSwaption.1 \
             ConvertibleBonds.1 \
             DiscreteHedging.1 \
             EquityOption.1 \
             SwapValuation.1

endif

