
dist_man_MANS = quantlib-config.1 \
                quantlib-test-suite.1

EXTRA_DIST =

if AUTO_EXAMPLES

dist_man_MANS += BermudanSwaption.1 \
                 Bonds.1 \
                 CallableBonds.1 \
                 CDS.1 \
                 ConvertibleBonds.1 \
                 DiscreteHedging.1 \
                 EquityOption.1 \
                 FittedBondCurve.1 \
                 FRA.1 \
                 MarketModels.1 \
                 SwapValuation.1 \
                 Replication.1 \
                 Repo.1

else

EXTRA_DIST += BermudanSwaption.1 \
              Bonds.1 \
              CallableBonds.1 \
              CDS.1 \
              ConvertibleBonds.1 \
              DiscreteHedging.1 \
              EquityOption.1 \
              FittedBondCurve.1 \
              FRA.1 \
              MarketModels.1 \
              SwapValuation.1 \
              Replication.1 \
              Repo.1

endif

if AUTO_BENCHMARK

dist_man_MANS += quantlib-benchmark.1

else

EXTRA_DIST += quantlib-benchmark.1

endif

