
include(${CMAKE_CURRENT_LIST_DIR}/../cmake/quantlib.cmake)
get_quantlib_library_name(QL_OUTPUT_NAME_SHARED)
set(QL_OUTPUT_NAME_STATIC "${QL_OUTPUT_NAME_SHARED}-s")

file(GLOB_RECURSE QUANTLIB_FILES "*.hpp" "*.cpp")
add_library(${QL_OUTPUT_NAME_SHARED} SHARED ${QUANTLIB_FILES})
add_library(${QL_OUTPUT_NAME_STATIC} STATIC ${QUANTLIB_FILES})

set_property(TARGET ${QL_OUTPUT_NAME_SHARED} PROPERTY PROJECT_LABEL "QuantLib")
set_property(TARGET ${QL_OUTPUT_NAME_STATIC} PROPERTY PROJECT_LABEL "QuantLib_Static")

# Windows needs to link static library (nothing is declared to export in QuantLib)
if(WIN32)
    set(QL_LINK_LIBRARY ${QL_OUTPUT_NAME_STATIC} PARENT_SCOPE)
else()
    set(QL_LINK_LIBRARY ${QL_OUTPUT_NAME_SHARED} PARENT_SCOPE)
endif()


install(DIRECTORY . DESTINATION include/ql
        FILES_MATCHING PATTERN "*.hpp" PATTERN "*.h")

install(TARGETS ${QL_OUTPUT_NAME_SHARED}
        ARCHIVE DESTINATION lib
        LIBRARY DESTINATION lib
        PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
        )

install(TARGETS ${QL_OUTPUT_NAME_STATIC}
        ARCHIVE DESTINATION lib
        LIBRARY DESTINATION lib
        PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ
        )
